# django_rest_framework

./: manage.py  pyproject.toml
cursos/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py  views_.py
cursos/migrations/: 0001_initial.py
escola/: settings.py  urls.py
